updated index file as the previous one was not redirecting properly

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>Creating checkout session for Semaglutide 90-Day Starter Plan...</p>
+    <p>Creating checkout session for Semaglutide 90-Day Plan...</p>
     
     <script>
         const ORG = 'cmwl';
         const CHECKOUT_URI = 'https://cmwl.portals.care/checkouts/';
-        const PRODUCT_ID = '6740b24d549a89a4abc4d25c'; // Semaglutide 90-Day Starter $498
+        const PRODUCT_ID = '6740b24d549a89a4abc4d25c'; // Semaglutide 90-Day Starter - Pay for 2 months, get 3rd free ($498), then $249/month
         
         const myHeaders = new Headers();
         myHeaders.append('organization', ORG);
